--- a/Proyecto-Final-ArquiHard/Proyecto-Final-ArquiHard.csproj
+++ b/Proyecto-Final-ArquiHard/Proyecto-Final-ArquiHard.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Proyecto_Final_ArquiHard</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
